--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,11 @@
                           <img src="./img/sochial-network/Telega.svg" alt="" />
                         </a>
                       </div>
-                      <a href="#" class="contact-telegram__text">
+                      <a
+                        href="https://t.me/home_ticket_bot"
+                        target="_blank"
+                        class="contact-telegram__text"
+                      >
                         @qwerty_01010100
                       </a>
                     </div>
